--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
         <title>Landing Page</title>
     </head>
     <body>
-        
+        <div class="header">
+            <div class="navbar">
+                <ul>
+                    <li>Header Logo</li>
+                </ul>
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
+            <div class="hero">
+                <div class="content">
+                    <h1>This Website is Awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast.</p>
+                    <button>Sign Up</button>
+                </div>
+                <div class="image">
+                    this is a placeholder for an image
+                </div>
+            </div>
+        </div>
+        <div class="random_info"></div>
+        <div class="quote"></div>
+        <div class="cta_container"></div>
+        <div class="footer"></div>
     </body>
 </html>
 
