--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <div class="header">
             <div class="navbar">
                 <ul>
-                    <li>Header Logo</li>
+                    <li class="logo">Header Logo</li>
                 </ul>
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="index.html">header link one</a></li>
+                    <li><a href="index.html">header link two</a></li>
+                    <li><a href="index.html">header link three</a></li>
                 </ul>
             </div>
             <div class="hero">
@@ -34,4 +34,5 @@
         <div class="footer"></div>
     </body>
 </html>
+
 
