styles for all sections

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Landing Page</title>
     </head>
     <body>
+
         <div class="header">
             <div class="navbar">
                 <ul>
@@ -28,10 +29,34 @@
                 </div>
             </div>
         </div>
-        <div class="random_info"></div>
-        <div class="quote"></div>
-        <div class="cta_container"></div>
-        <div class="footer"></div>
+
+        <div class="random_info">
+            <h1>Some random information.</h1>
+            <div class="content">
+                <div class="container"><div class="box"></div>This is some subtext under an illustration or image.</div>
+                <div class="container"><div class="box"></div>This is some subtext under an illustration or image.</div>
+                <div class="container"><div class="box"></div>This is some subtext under an illustration or image.</div>
+                <div class="container"><div class="box"></div>This is some subtext under an illustration or image.</div>
+            </div>
+        </div>
+
+        <div class="quote">
+            <em class="content">"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</em>
+            <p class="strong">-Thor, God of Thunder</p>
+        </div>
+
+        <div class="cta">
+            <div class="container">
+                <div class="content">
+                    <strong>Call to Action! Its Time!</strong>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </div>
+
+        <div class="footer">Copyright @ The Odin Project 2021</div>
+
     </body>
 </html>
 
